--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <title></title>
     <link rel="Shortcut Icon" href="images/favicon.ico" type="image/x-icon" />
+    <meta property="og:type" content="Website">
+    <meta property="og:url" content="https://clmm.qminh.xyz">
+    <meta property="og:title" content="Chẽ lẳn Moi Moi - Web chẽ lẳn uy tín nhất VN">
+    <meta property="og:site_name" content="Chẽ lẳn Moi Moi">
+    <meta property="og:description" content="Chào mừng đến với Chẽ lẳn Moi Moi, Web chẽ lẳn uy tín nhất VN">
+    <meta property="og:image" content="./thumbnail.jpg">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta content="INDEX,FOLLOW" name="robots" />
 </head>
+
 <body>
     <div style="text-align: center">
         BỘ CÔNG AN<br />
@@ -28,14 +37,13 @@
     <div style="text-align: center; font-size: 15px; padding-top: 30px;">
         Mọi thông tin tố giác tội phạm có liên quan xin gửi về:
         <br />
-        Cục An ninh mạng và phòng chống tội phạm sử dụng Công nghệ cao, số 207 Khuất Duy Tiến, Nhân Chính, Thanh Xuân, Hà Nội.
+        Cục An ninh mạng và phòng chống tội phạm sử dụng Công nghệ cao, số 207 Khuất Duy Tiến, Nhân Chính, Thanh Xuân,
+        Hà Nội.
     </div>
 
-<div style="text-align: center; font-size: 15px; padding-top: 5px;">
-<img alt="" src="http://www.wieistmeineip.de/ip-address" />
-</div>
+    <div style="text-align: center; font-size: 15px; padding-top: 5px;">
+        <img alt="" src="http://www.wieistmeineip.de/ip-address" />
+    </div>
 </body>
+
 </html>
-
- 
-
